added a single row of images which are responsive

--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,26 @@
       </div>
     </div>
    </nav>
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1586730113367-5c077569457a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1586731896888-b7268a8de6c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>		
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1586730469883-b030fc68e29c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
+			
+		</div>
+	</div>
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
