added two more rows of images which are responsive

--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,36 @@
 					<img src = "https://images.unsplash.com/photo-1586730469883-b030fc68e29c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
 				</div>
 			</div>	
-			
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1505201372024-aedc618d47c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1503408024948-0a3e1b2b519c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>		
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1503164585513-5c4f19209317?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1583623572204-7775414c503d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1586726247946-190366adb87f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>		
+			<div class="col-lg-4 col-sm-6">
+				<div class="thumbnail">
+					<img src = "https://images.unsplash.com/photo-1583623609153-1d1e1b1c7a30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+				</div>
+			</div>	
 		</div>
 	</div>
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
